Finished second example

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="public/css/styles.css">
 </head>
 <body>
-    <div class="d-flex flex-column flex-sm-row gap-3 gap-sm-5 align-items-center justify-content-center overflow-hidden">
+    <div class="my-5 py-3 d-flex flex-column flex-sm-row gap-3 gap-sm-5 align-items-center justify-content-center overflow-hidden">
         <ul class="p-2 dropdown-menu shadow" style="width: 220px;">
             <li>
                 <a class="dropdown-item active rounded" href="#">Action</a>
@@ -42,6 +42,63 @@
                 <a class="dropdown-item rounded" href="#">Separated link</a>
             </li>
         </ul> 
+    </div>
+    <div class="space"></div>
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center gap-3 gap-md-5 my-5 py-3">
+        <div class="d-block dropdown-menu pt-0 mx-0 rounded-3 shadow overflow-hidden" style="width: 280px;">
+            <form class="p-2 mb-2 bg-light border-bottom">
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Type to filter...">
+            </form>
+            <ul class="list-unstyled mb-0">
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-success" style="width: 8px; height: 8px;"></span>Action
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-primary" style="width: 8px; height: 8px;"></span>Another action
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-danger" style="width: 8px; height: 8px;"></span>Something else here
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-info" style="width: 8px; height: 8px;"></span>Separated link
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="d-block dropdown-menu dropdown-menu-dark pt-0 mx-0 rounded-3 border-0 shadow overflow-hidden" style="width: 280px; height: 233px;">
+            <form class="p-2 mb-2 bg-dark border-bottom border-dark">
+                <input type="email" class="form-control form-control-dark" id="exampleFormControlInput1" placeholder="Type to filter...">
+            </form>
+            <ul class="list-unstyled mb-0">
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-success" style="width: 8px; height: 8px;"></span>Action
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-primary" style="width: 8px; height: 8px;"></span>Another action
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-danger" style="width: 8px; height: 8px;"></span>Something else here
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item d-flex align-items-center gap-2 py-2" href="#">
+                        <span class="d-inline-block rounded-circle bg-info" style="width: 8px; height: 8px;"></span>Separated link
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="space"></div>
     
