Finished fifth example

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- /Font Awesome -->
 </head>
 <body>
-    <div class="my-5 py-3 d-flex flex-column flex-sm-row gap-3 gap-sm-5 align-items-center justify-content-center overflow-hidden">
+    <div class="my-4 py-5 d-flex flex-column flex-sm-row gap-3 gap-sm-5 align-items-center justify-content-center overflow-hidden">
         <ul class="p-2 dropdown-menu dropdown-menu-macos shadow" style="width: 220px;">
             <li>
                 <a class="dropdown-item active rounded" href="#">Action</a>
@@ -47,7 +47,7 @@
         </ul> 
     </div>
     <div class="space"></div>
-    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center gap-3 gap-md-5 my-5 py-3">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center gap-3 gap-md-5 my-4 py-5">
         <div class="dropdown-menu pt-0 mx-0 rounded-3 shadow overflow-hidden" style="width: 280px;">
             <form class="p-2 mb-2 bg-light border-bottom">
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Type to filter...">
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="space"></div>
-    <div class="my-5 py-3 d-flex flex-column flex-sm-row gap-3 gap-sm-5 align-items-center justify-content-center">
+    <div class="my-4 py-5 d-flex flex-column flex-sm-row gap-3 gap-sm-5 align-items-center justify-content-center">
         <ul class="dropdown-menu list-unstyled shadow" style="width: 220px;">
             <li>
                 <a class="dropdown-item" href="#">
@@ -177,8 +177,8 @@
         </ul>
     </div>
     <div class="space"></div>
-    <div class="my-5 py-3 d-flex justify-content-center">
-        <div class="cal p-2 dropdown-menu d-grid shadow" style="width: 340px;">
+    <div class="my-4 py-5 overflow-auto">
+        <div class="cal mx-auto p-2 dropdown-menu d-grid shadow" style="max-width: 340px;">
             <div class="cal__month">
                 <button class="btn btn-cal">
                     <i class="fa-solid fa-arrow-left small"></i>
@@ -233,6 +233,28 @@
                 <button class="btn btn-cal">31</button>
             </div>
         </div>
+    </div>
+    <div class="space"></div>
+    <div class="my-4 py-5 overflow-auto">
+        <div class="dropdown-menu d-flex mx-auto p-3 rounded-3 shadow" style="max-width: 600px;">
+            <div class="col-11 col-sm-8 d-grid gap-2">
+                <a class="btn btn-hover-light py-2 px-3 d-flex align-items-center gap-3 lh-sm" href="#">
+                    <i class="fa-solid fa-image" id="fa-image"></i>
+                    <div class="text-start">
+                        <strong class="d-block">Features</strong>
+                        <small>Take a tour through the product</small>
+                    </div>
+                </a>
+                <a class="btn btn-hover-light py-2 px-3 d-flex align-items-center gap-3 lh-sm" href="#">
+                    <i class="fa-regular fa-circle-question" id="fa-circle-question"></i>
+                    <div class="text-start">
+                        <strong class="d-block">Support</strong>
+                        <small>Get help from our support crew</small>
+                    </div>
+                </a>
+            </div>
+            <div class="col">...</div>
+        </div>    
     </div>
     <div class="space"></div>
          
